# speech-language-identification-api

./: .dockerignore copy  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py  model.py  utils.py
src/: main.py
static/: langs.json
